# captapi

./: .gitignore  LAUNCH_CHECKLIST.md  README.md  SETUP.md  comprehensive-live-audit-live.jsonl  comprehensive-live-audit-report.json
backend/: .dockerignore  .env.example  Dockerfile  _dbg_followers.py  _dbg_igaudio.py  _live_quick.py  api_snapshots.json  gen_examples.py  openapi.snapshot.json  pyproject.toml  smoke_all.py  smoke_comprehensive.py  smoke_fb_event_details.py  smoke_fb_marketplace_events.py  smoke_gap_endpoints.py  smoke_new_endpoints.py  smoke_new_live.py  smoke_retest.py  smoke_transcripts.py  smoke_youtube.py
backend/app/: __init__.py  main.py
backend/app/core/: auth.py  config.py  credits.py  internal_token.py  quota.py  rate_limit.py  security.py
backend/app/routers/: account.py  ad_library.py  age_gender.py  amazon_shop.py  analytics.py  auth_keys.py  batch.py  billing.py  bluesky.py  creator_pages.py  facebook.py  github.py  google_search.py  history.py  instagram.py  kick.py  kwai.py  linkedin.py  linktree.py  mcp.py  monitors.py  pinterest.py  reddit.py  rumble.py  snapchat.py  soundcloud.py  spotify.py  status.py  threads.py  tiktok.py  tiktok_shop.py  truth_social.py  twitch.py  twitter.py  video.py  youtube.py
backend/app/schemas/: common.py  (+2 more)
backend/scripts/: _list_cache_names.py  add_changelog_music_posts_removal.py  capture_snapshots_batch.py  create_tool_key.py  create_zapier_review_account.py  dump_openapi.py  rebuild_snapshots.py  sdk_smoke.py  sdk_smoke_ts.py  sync_docs_examples.py  tiktok_native_smoke.py  topup_test_credits.py
(+310 files in other folders)
