[project]
name = "captapi-backend"
version = "0.1.0"
description = "Captapi — Social media data extraction API"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "gunicorn>=23.0.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "httpx>=0.27.0",
  "supabase>=2.9.0",
  "openai>=1.54.0",
  "dodopayments>=1.34.0",
  "standardwebhooks>=1.0.0",
  "apify-client>=1.8.0",
  "redis>=5.2.0",
  "bcrypt>=4.2.0",
  "python-multipart>=0.0.12",
  "python-dotenv>=1.0.1",
  "sentry-sdk[fastapi]>=2.18.0",
  "tenacity>=9.0.0",
  "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.0",
  "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
